--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,140 +1,105 @@
-version: "3"
-
+version: '3.8'
 services:
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
     container_name: namenode
-    restart: always
-    ports:
-      - 9870:9870
-      - 9010:9000
-    volumes:
-      - hadoop_namenode:/hadoop/dfs/name
     environment:
       - CLUSTER_NAME=test
-      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
-    env_file:
-      - ./hadoop.env
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+      - CLUSTER_CONF_dfs_replication=1
+    ports:
+      - "9870:9870"
+      - "9000:9000"
+    volumes:
+      - namenode:/hadoop/dfs/name
+    networks:
+      - hadoop
 
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
     container_name: datanode
-    restart: always
-    volumes:
-      - hadoop_datanode:/hadoop/dfs/data
     environment:
-      SERVICE_PRECONDITION: "namenode:9870"
-      CORE_CONF_fs_defaultFS: hdfs://namenode:9000
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
     ports:
       - "9864:9864"
-    env_file:
-      - ./hadoop.env
+    volumes:
+      - datanode:/hadoop/dfs/data
+    networks:
+      - hadoop
 
   resourcemanager:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.2.1-java8
     container_name: resourcemanager
-    restart: always
     environment:
-      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864"
-    env_file:
-      - ./hadoop.env
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+    ports:
+      - "8088:8088"
+    networks:
+      - hadoop
 
-  nodemanager1:
+  nodemanager:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.2.1-java8
     container_name: nodemanager
-    restart: always
     environment:
-      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
-    env_file:
-      - ./hadoop.env
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+    networks:
+      - hadoop
 
   historyserver:
     image: bde2020/hadoop-historyserver:2.0.0-hadoop3.2.1-java8
     container_name: historyserver
-    restart: always
     environment:
-      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+    ports:
+      - "8188:8188"
+    networks:
+      - hadoop
     volumes:
-      - hadoop_historyserver:/hadoop/yarn/timeline
-    env_file:
-      - ./hadoop.env
+      - historyserver:/hadoop/yarn/timeline
 
   spark-master:
-    image: bde2020/spark-master:3.0.0-hadoop3.2
+    image: jupyter/pyspark-notebook:spark-3.1.1
     container_name: spark-master
-    depends_on:
-      - namenode
-      - datanode
+    environment:
+      - SPARK_MODE=master
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+      - SPARK_CONF_spark_eventLog_enabled=true
+      - SPARK_CONF_spark_eventLog_dir=hdfs://namenode:8020/spark-logs
+      - SPARK_CONF_spark_history_fs_logDirectory=hdfs://namenode:8020/spark-logs
     ports:
       - "8080:8080"
       - "7077:7077"
-    environment:
-      - INIT_DAEMON_STEP=setup_spark
-      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+    networks:
+      - hadoop
 
-  spark-worker-1:
-    image: bde2020/spark-worker:3.0.0-hadoop3.2
-    container_name: spark-worker-1
-    depends_on:
-      - spark-master
+  spark-worker:
+    image: jupyter/pyspark-notebook:spark-3.1.1
+    container_name: spark-worker
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER=spark://spark-master:7077
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
     ports:
       - "8081:8081"
+    networks:
+      - hadoop
+
+  spark-history-server:
+    image: bde2020/spark-history-server:3.1.1-hadoop3.2
+    container_name: spark-history-server
     environment:
-      - "SPARK_MASTER=spark://spark-master:7077"
-      - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
-
-  hive-server:
-    image: bde2020/hive:2.3.2-postgresql-metastore
-    container_name: hive-server
-    depends_on:
-      - namenode
-      - datanode
-    env_file:
-      - ./hadoop-hive.env
-    environment:
-      HIVE_CORE_CONF_javax_jdo_option_ConnectionURL: "jdbc:postgresql://hive-metastore/metastore"
-      SERVICE_PRECONDITION: "hive-metastore:9083"
+      - SPARK_MODE=history-server
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+      - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=hdfs://namenode:8020/spark-logs
     ports:
-      - "10000:10000"
-
-  hive-metastore:
-    image: bde2020/hive:2.3.2-postgresql-metastore
-    container_name: hive-metastore
-    env_file:
-      - ./hadoop-hive.env
-    command: /opt/hive/bin/hive --service metastore
-    environment:
-      SERVICE_PRECONDITION: "namenode:9870 datanode:9864 hive-metastore-postgresql:5432"
-    ports:
-      - "9083:9083"
-
-  hive-metastore-postgresql:
-    image: bde2020/hive-metastore-postgresql:2.3.0
-    container_name: hive-metastore-postgresql
-
-  presto-coordinator:
-    image: shawnzhu/prestodb:0.181
-    container_name: presto-coordinator
-    ports:
-      - "8089:8089"
-
-  init-scripts:
-    image: bde2020/hadoop-base:2.0.0-hadoop3.2.1-java8
-    container_name: init-scripts
-    depends_on:
-      - namenode
-      - datanode
-    volumes:
-      - ./scripts/create_folders.sh:/scripts/create_folders.sh
-      - ./scripts/monitor.sh:/scripts/monitor.sh
-      - ./scripts/to_json.sh:/scripts/to_json.sh
-      - ./scripts/csv_to_json.py:/scripts/csv_to_json.py
-      - ./scripts/html_to_json.py:/scripts/html_to_json.py
-      - ./scripts/xml_to_json.py:/scripts/xml_to_json.py
-
-    entrypoint: ["/bin/bash", "-c", "/scripts/create_folders.sh && /scripts/monitor.sh && /scripts/to_json.sh"]
+      - "18080:18080"
+    networks:
+      - hadoop
 
 volumes:
-  hadoop_namenode:
-  hadoop_datanode:
-  hadoop_historyserver:
+  namenode:
+  datanode:
+  historyserver:
+
+networks:
+  hadoop:
